Update and rename baeflixtest_formatted.html to index.html

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <meta content="https://enhypen-flix.carrd.co" property="og:url"/>
   <meta content="summary_large_image" property="twitter:card"/>
   <link href="https://enhypen-flix.carrd.co" rel="canonical"/>
-  <link href="assets/images/baeflixfavicon.png" rel="icon" type="image/png"/>
-  <link href="assets/images/baeflixfavicon.png" rel="apple-touch-icon"/>
-  <link href="cleaned.css" rel="stylesheet"/>
+  <link href="baeflix/assets/images/baeflixfavicon.png" rel="icon" type="image/png"/>
+  <link href="baeflix/assets/images/baeflixfavicon.png" rel="apple-touch-icon"/>
+  <link href="baeflix/cleaned.css" rel="stylesheet"/>
  </head>
  <body cz-shortcut-listen="true">
   <svg display="none" height="0" version="1.1" viewbox="0 0 40 40" width="0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -37,7 +37,7 @@
 
       <div class="image" id="openinglogo" style="opacity: 1; transform: none;">
        <a class="frame" href="#welcome">
-        <img alt="" src="assets/images/baeflix_logo_hq.jpg"/>
+        <img alt="" src="baeflix/assets/images/baeflix_logo_hq.jpg"/>
        </a>
       </div>
      </section>
@@ -51,7 +51,7 @@
         <div class="image-item">
           <div class="style2 image" data-position="center" style="opacity: 0; transform: translateY(-1.6875rem);">
            <a class="frame deferred" href="#catalogue" style='background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCA0NzAgNDY5IiB3aWR0aD0iNDcwIiBoZWlnaHQ9IjQ2OSIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSI%2BPHJlY3QgZmlsbD0iIzhkNzU3MSIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D"); background-size: 100% 100%; background-position: left top; background-repeat: no-repeat;'>
-            <img alt="" data-src="assets/images/whoiswatchingicons-01.jpg" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCA0NzAgNDY5IiB3aWR0aD0iNDcwIiBoZWlnaHQ9IjQ2OSIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSI%2BPHJlY3QgZmlsbD0iIzhkNzU3MSIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D" style="opacity: 0; transition: opacity 0.375s ease-in-out;"/>
+            <img alt="" data-src="baeflix/assets/images/whoiswatchingicons-01.jpg" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCA0NzAgNDY5IiB3aWR0aD0iNDcwIiBoZWlnaHQ9IjQ2OSIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSI%2BPHJlY3QgZmlsbD0iIzhkNzU3MSIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D" style="opacity: 0; transition: opacity 0.375s ease-in-out;"/>
            </a>
           </div>
           <p class="landingpagetext" style="opacity: 0;">
@@ -61,7 +61,7 @@
         <div class="image-item">
             <div class="style3 image" data-position="center" style="opacity: 0; transform: translateY(-1.6875rem);">
              <a class="frame deferred" href="#abenflix" style='background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCA0NzAgNDY5IiB3aWR0aD0iNDcwIiBoZWlnaHQ9IjQ2OSIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSI%2BPHJlY3QgZmlsbD0iIzhkNzU3MSIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D"); background-size: 100% 100%; background-position: left top; background-repeat: no-repeat;'>
-              <img alt="" data-src="assets/images/whoiswatchingicons-02.jpg" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCA0NzAgNDY5IiB3aWR0aD0iNDcwIiBoZWlnaHQ9IjQ2OSIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSI%2BPHJlY3QgZmlsbD0iIzhkNzU3MSIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D" style="opacity: 0; transition: opacity 0.375s ease-in-out;"/>
+              <img alt="" data-src="baeflix/assets/images/whoiswatchingicons-02.jpg" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCA0NzAgNDY5IiB3aWR0aD0iNDcwIiBoZWlnaHQ9IjQ2OSIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSI%2BPHJlY3QgZmlsbD0iIzhkNzU3MSIgd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIvPjwvc3ZnPg%3D%3D" style="opacity: 0; transition: opacity 0.375s ease-in-out;"/>
              </a>
             </div>
             <p class="landingpagetext" style="opacity: 0;">
@@ -79,7 +79,7 @@
          <div>
           <div class="style5 image" style="opacity: 0; transform: translateY(-1.6875rem);">
            <a class="frame" href="#welcome">
-            <img alt="" src="assets/images/image09.jpg?v=b69309f1"/>
+            <img alt="" src="baeflix/assets/images/image09.jpg?v=b69309f1"/>
            </a>
           </div>
          </div>
@@ -194,7 +194,7 @@
             <div class="wrapper" style="width: 100%; display: flex; justify-content: space-between; align-items: center;">
                <div class="image" id="smalllogo" style="opacity: 1; flex: 0 1 auto;">
                   <a class="frame" href="#welcome">
-                     <img alt="" src="assets/images/baeflix_logo_small.jpg"/>
+                     <img alt="" src="baeflix/assets/images/baeflix_logo_small.jpg"/>
                   </a>
                </div>
                <div class="text-container" style="text-align: right; flex: 1;">
@@ -209,7 +209,7 @@
       <!--this is the big banner image at the top of the page-->
       <div class="banner" data-position="center" id="image25" style="opacity: 0; transform: translateY(-1.6875rem); margin-bottom: 0px;">
        <a class="frame deferred" href="#luceat" style='background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAyNTYwIDg5OSIgd2lkdGg9IjI1NjAiIGhlaWdodD0iODk5IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cmVjdCBmaWxsPSIjNGMzNDJhIiB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIi8%2BPC9zdmc%2B"); background-size: 100% 100%; background-position: left top; background-repeat: no-repeat;'>
-        <img alt="" data-src="assets/images/newchapterluceatbanner-01.jpg" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAyNTYwIDg5OSIgd2lkdGg9IjI1NjAiIGhlaWdodD0iODk5IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cmVjdCBmaWxsPSIjNGMzNDJhIiB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIi8%2BPC9zdmc%2B" style="opacity: 0; transition: opacity 0.375s ease-in-out;"/>
+        <img alt="" data-src="baeflix/assets/images/newchapterluceatbanner-01.jpg" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAyNTYwIDg5OSIgd2lkdGg9IjI1NjAiIGhlaWdodD0iODk5IiBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJub25lIj48cmVjdCBmaWxsPSIjNGMzNDJhIiB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIi8%2BPC9zdmc%2B" style="opacity: 0; transition: opacity 0.375s ease-in-out;"/>
        </a>
       </div>
     <!-- Container for text and slider -->
@@ -229,19 +229,19 @@
       <div class="cataloguepagegrid">
         <div class="catalogue-item style1 image" >
           <a class="frame" href="#fly173">
-            <img alt="" src="assets/images/fly173_cover.jpg"/>
+            <img alt="" src="baeflix/assets/images/fly173_cover.jpg"/>
             <div class="caption">FLY173</div>
           </a>
         </div>
         <div class="catalogue-item style1 image">
           <a class="frame" href="#newenhahi">
-            <img alt="" src="assets/images/popcorn173_cover.jpg"/>
+            <img alt="" src="baeflix/assets/images/popcorn173_cover.jpg"/>
             <div class="caption">Popcorn173</div>
           </a>
         </div>
         <div class="catalogue-item style1 image">
             <a class="frame" href="#podolarcade">
-              <img alt="" src="assets/images/podolarcade_cover.jpg"/>
+              <img alt="" src="baeflix/assets/images/podolarcade_cover.jpg"/>
               <div class="caption">Pocketdol Arcade</div>
             </a>
           </div>
@@ -253,7 +253,7 @@
       <div class="cataloguepagegrid">
         <div class="catalogue-item style1 image" >
           <a class="frame" href="#luceat">
-            <img alt="" src="assets/images/luceat_cover.jpg"/>
+            <img alt="" src="baeflix/assets/images/luceat_cover.jpg"/>
             <div class="caption">New Chapter: Luceat</div>
           </a>
         </div>
@@ -276,13 +276,13 @@
        <div class="cataloguepagegrid">
         <div class="catalogue-item style1 image" >
           <a class="frame" href="#newiland">
-            <img alt="" src="assets/images/baecation_cover.jpg"/>
+            <img alt="" src="baeflix/assets/images/baecation_cover.jpg"/>
             <div class="caption">BAEcation</div>
           </a>
         </div>
         <div class="catalogue-item style1 image noengsub">
           <a class="frame" href="#newenhahi">
-            <img alt="" src="assets/images/polaris_cover.jpg"/>
+            <img alt="" src="baeflix/assets/images/polaris_cover.jpg"/>
             <div class="caption">Polaris</div>
           </a>
         </div>
@@ -345,37 +345,37 @@
         <div class="cataloguepagegrid">
             <div class="episodelog-item style7 image" >
               <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=15">
-                <img alt="" src="assets/images/fly173s1e1.jpg"/>
+                <img alt="" src="baeflix/assets/images/fly173s1e1.jpg"/>
               </a>
             </div>
             <div class="episodelog-item style7 image">
               <a class="frame" href="https://www.youtube.com/watch?v=8aKX1zBqMds&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=14">
-                <img alt="" src="assets/images/fly173s1e2.jpg"/>
+                <img alt="" src="baeflix/assets/images/fly173s1e2.jpg"/>
               </a>
             </div>
             <div class="episodelog-item style7 image" >
                 <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=15">
-                  <img alt="" src="assets/images/fly173s1e3.jpg"/>
+                  <img alt="" src="baeflix/assets/images/fly173s1e3.jpg"/>
                 </a>
               </div>
           <div class="episodelog-item style7 image" >
             <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=15">
-              <img alt="" src="assets/images/fly173s1e4.jpg"/>
+              <img alt="" src="baeflix/assets/images/fly173s1e4.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
             <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=15">
-              <img alt="" src="assets/images/fly173s1e5.jpg"/>
+              <img alt="" src="baeflix/assets/images/fly173s1e5.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
             <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=15">
-              <img alt="" src="assets/images/fly173s1e6.jpg"/>
+              <img alt="" src="baeflix/assets/images/fly173s1e6.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
             <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=15">
-              <img alt="" src="assets/images/fly173s1e7.jpg"/>
+              <img alt="" src="baeflix/assets/images/fly173s1e7.jpg"/>
             </a>
           </div>
         </div>
@@ -394,7 +394,7 @@
         <div class="teasercontainer" style="margin-bottom:0px; padding-top: 0px;">
             <div class="video-box">
                 <div class="textbox">
-                    <img alt="" src="assets/images/luceat_cover.jpg"/>
+                    <img alt="" src="baeflix/assets/images/luceat_cover.jpg"/>
                 </div>
                 <iframe 
                 class="youtube-video" 
@@ -434,7 +434,7 @@
        </section>
        <section class="inactive" id="podolarcade-section" style="display: none;">
         <div class="bckgndimage-container">
-            <img src="assets/images/podolarcade_bckgnd.jpg" alt="Background Image" class="background-image" />
+            <img src="baeflix/assets/images/podolarcade_bckgnd.jpg" alt="Background Image" class="background-image" />
             <div class="overlay-content">
                 <h1>Pocketdol Arcade</h1>
                 <p>BAE173 members play games with fellow Pocketdol artists, including Fantasy Boys, CLASS:y, Espero and soloist Bok Ji Eun.</p>
