--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta content="width=device-width,initial-scale=1" name="viewport"/>
   <meta content="light only" name="color-scheme"/>
   <meta content="On EN-FLIX you will find all the contents of ENHYPEN in the palm of your hand!" name="description"/>
-  <meta content="EN-FLIX" property="og:site_name"/>
-  <meta content="EN-FLIX" property="og:title"/>
+  <meta content="BAE-FLIX" property="og:site_name"/>
+  <meta content="BAE-FLIX" property="og:title"/>
   <meta content="website" property="og:type"/>
   <meta content="On EN-FLIX you will find all the contents of ENHYPEN in the palm of your hand!" property="og:description"/>
   <meta content="https://enhypen-flix.carrd.co/assets/images/share.jpg?v=b69309f1" property="og:image"/>
