--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width,initial-scale=1" name="viewport"/>
   <meta content="light only" name="color-scheme"/>
-  <meta content="On EN-FLIX you will find all the contents of ENHYPEN in the palm of your hand!" name="description"/>
+  <meta content="Content archive for BAE173!" name="description"/>
   <meta content="BAE-FLIX" property="og:site_name"/>
   <meta content="BAE-FLIX" property="og:title"/>
   <meta content="website" property="og:type"/>
-  <meta content="On EN-FLIX you will find all the contents of ENHYPEN in the palm of your hand!" property="og:description"/>
-  <meta content="https://enhypen-flix.carrd.co/assets/images/share.jpg?v=b69309f1" property="og:image"/>
+  <meta content="Content archive for BAE173!" property="og:description"/>
+  <meta content="https://bae173.github.io/assets/images/baeflix_logo_small.jpg" property="og:image"/>
   <meta content="image/jpeg" property="og:image:type"/>
   <meta content="1200" property="og:image:width"/>
   <meta content="899" property="og:image:height"/>
-  <meta content="https://enhypen-flix.carrd.co" property="og:url"/>
+  <meta content="https://bae173.github.io" property="og:url"/>
   <meta content="summary_large_image" property="twitter:card"/>
-  <link href="https://enhypen-flix.carrd.co" rel="canonical"/>
+  <link href="https://bae173.github.io" rel="canonical"/>
   <link href="assets/images/baeflixfavicon.png" rel="icon" type="image/png"/>
   <link href="assets/images/baeflixfavicon.png" rel="apple-touch-icon"/>
   <link href="cleaned.css" rel="stylesheet"/>
