--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
   <link href="assets/images/baeflixfavicon.png" rel="icon" type="image/png"/>
   <link href="assets/images/baeflixfavicon.png" rel="apple-touch-icon"/>
   <link href="cleaned.css" rel="stylesheet"/>
+
+  <!-- twitter preview settings-->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="BAE-FLIX">
+  <meta name="twitter:description" content="Content archive for BAE173!">
+  <meta name="twitter:image" content="https://bae173.github.io/assets/images/baeflix_logo_small.jpg">
+  <meta name="twitter:image:alt" content="baeflix logo">
+  
+
  </head>
  <body cz-shortcut-listen="true">
   <svg display="none" height="0" version="1.1" viewbox="0 0 40 40" width="0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
