--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <meta content="BAE-FLIX" property="og:title"/>
   <meta content="website" property="og:type"/>
   <meta content="Content archive for BAE173!" property="og:description"/>
-  <meta content="https://bae173.github.io/assets/images/baeflix_logo_small.jpg" property="og:image"/>
+  <meta content="https://bae173.github.io/assets/images/baeflix_logo_small.jpg?v=2" property="og:image"/>
   <meta content="image/jpeg" property="og:image:type"/>
   <meta content="1200" property="og:image:width"/>
   <meta content="899" property="og:image:height"/>
-  <meta content="https://bae173.github.io" property="og:url"/>
+  <meta content="https://bae173.github.io/?refresh=2" property="og:url"/>
   <meta content="summary_large_image" property="twitter:card"/>
   <link href="https://bae173.github.io" rel="canonical"/>
   <link href="assets/images/baeflixfavicon.png" rel="icon" type="image/png"/>
