--- a/index.html
+++ b/index.html
@@ -189,6 +189,12 @@
               <div class="caption">Pocketdol Arcade</div>
             </a>
           </div>
+        <div class="catalogue-item style1 image">
+            <a class="frame" href="#baelog">
+              <img alt="" src="assets/images/baelog_cover.jpg"/>
+              <div class="caption">BAE-LOG</div>
+            </a>
+          </div>
       </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
