--- a/index.html
+++ b/index.html
@@ -208,17 +208,30 @@
           </a>
         </div>
       </div>
+
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
        TV Appearances
       </p>
+      <div class="cataloguepagegrid">
+      </div>
+
+      <p class="style1" style="opacity: 0; transform: scale(0.94375);">
+        Survival Show Appearances
+       </p>
+       <div class="cataloguepagegrid">
+        </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
         Youtube Variety Appearances
       </p>
+      <div class="cataloguepagegrid">
+        </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
        Radio Shows
       </p>
+      <div class="cataloguepagegrid">
+        </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
         Fan Concerts
@@ -237,26 +250,37 @@
           </a>
         </div>
       </div>
+
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
         Joint Concerts & Festivals
       </p>
+      <div class="cataloguepagegrid">
+    </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
        Lives
       </p>
+      <div class="cataloguepagegrid">
+    </div>
 
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
         Magazines/Ads Photoshoot Behinds
       </p> 
+      <div class="cataloguepagegrid">
+    </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
         Webdramas
        </p>
+       <div class="cataloguepagegrid">
+    </div>
 
       <p class="style1" style="opacity: 0; transform: scale(0.94375);">
        Others
       </p>
+      <div class="cataloguepagegrid">
+    </div>
  
 
       <p class="navbartext" style="opacity: 0; transform: translateY(-1.6875rem);">
@@ -303,36 +327,82 @@
               </a>
             </div>
             <div class="episodelog-item style7 image" >
-                <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=15">
+                <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=13">
                   <img alt="" src="assets/images/fly173s1e3.jpg"/>
                 </a>
               </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=15">
+            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=12">
               <img alt="" src="assets/images/fly173s1e4.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=15">
+            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=11">
               <img alt="" src="assets/images/fly173s1e5.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=15">
+            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=10">
               <img alt="" src="assets/images/fly173s1e6.jpg"/>
             </a>
           </div>
-          <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=15">
-              <img alt="" src="assets/images/fly173s1e7.jpg"/>
-            </a>
-          </div>
-          </ul>
+        </ul>
         </div>
 
         <p class="style1" style="opacity: 0; transform: scale(0.94375);">
             Season 2
-        </p>         
+        </p>
+        <div class="centeringcontainer">
+            <ul>
+                <div class="episodelog-item style7 image" >
+                  <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=9">
+                    <img alt="" src="assets/images/fly173s2e1.jpg"/>
+                  </a>
+                </div>
+                <div class="episodelog-item style7 image">
+                  <a class="frame" href="https://www.youtube.com/watch?v=8aKX1zBqMds&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=8">
+                    <img alt="" src="assets/images/fly173s2e2.jpg"/>
+                  </a>
+                </div>
+                <div class="episodelog-item style7 image" >
+                    <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=7">
+                      <img alt="" src="assets/images/fly173s2e3.jpg"/>
+                    </a>
+                  </div>
+              <div class="episodelog-item style7 image" >
+                <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=6">
+                  <img alt="" src="assets/images/fly173s2e4.jpg"/>
+                </a>
+              </div>
+              <div class="episodelog-item style7 image" >
+                <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=5">
+                  <img alt="" src="assets/images/fly173s2e5.jpg"/>
+                </a>
+              </div>
+              <div class="episodelog-item style7 image" >
+                <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=4">
+                  <img alt="" src="assets/images/fly173s2e6.jpg"/>
+                </a>
+              </div>
+              <div class="episodelog-item style7 image" >
+                <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=3">
+                  <img alt="" src="assets/images/fly173s2e7.jpg"/>
+                </a>
+              </div>
+              <div class="episodelog-item style7 image" >
+                <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=2">
+                  <img alt="" src="assets/images/fly173s2e8.jpg"/>
+                </a>
+              </div>
+              <div class="episodelog-item style7 image" >
+                <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=1">
+                  <img alt="" src="assets/images/fly173s2e9.jpg"/>
+                </a>
+              </div>
+            </ul>
+        </div>
+            
+            
        </section>
        <section class="inactive" id="luceat-section" style="display: none;">
         <div class="top-banner">
