--- a/index.html
+++ b/index.html
@@ -430,58 +430,73 @@
         <div class="centeringcontainer">
         <ul>
             <div class="episodelog-item style7 image" >
-              <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=15">
+              <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=20">
                 <img alt="" src="assets/images/popcorn173e1.jpg"/>
               </a>
             </div>
             <div class="episodelog-item style7 image">
-              <a class="frame" href="https://www.youtube.com/watch?v=8aKX1zBqMds&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=14">
+              <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=19">
                 <img alt="" src="assets/images/popcorn173e2.jpg"/>
               </a>
             </div>
             <div class="episodelog-item style7 image" >
-                <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=13">
+                <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=18">
                   <img alt="" src="assets/images/popcorn173e3.jpg"/>
                 </a>
               </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=12">
+            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=17">
               <img alt="" src="assets/images/popcorn173e4.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=11">
+            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=16">
               <img alt="" src="assets/images/popcorn173e5.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=11">
-              <img alt="" src="assets/images/popcorn173e5.jpg"/>
+            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=15">
+              <img alt="" src="assets/images/popcorn173e6.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=11">
-              <img alt="" src="assets/images/popcorn173e5.jpg"/>
+            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=14">
+              <img alt="" src="assets/images/popcorn173e7.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=11">
-              <img alt="" src="assets/images/popcorn173e5.jpg"/>
+            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=13">
+              <img alt="" src="assets/images/popcorn173e8.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=11">
-              <img alt="" src="assets/images/popcorn173e5.jpg"/>
+            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=12">
+              <img alt="" src="assets/images/popcorn173e9.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=11">
-              <img alt="" src="assets/images/popcorn173e5.jpg"/>
+            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=11">
+              <img alt="" src="assets/images/popcorn173e10.jpg"/>
             </a>
           </div>
           <div class="episodelog-item style7 image" >
-            <a class="frame" href="https://www.youtube.com/watch?v=Gkq3gs84Br0&list=PL7-50R2PypvF009MOE8TipDWmN_EqsJat&index=11">
-              <img alt="" src="assets/images/popcorn173e5.jpg"/>
+            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=10">
+              <img alt="" src="assets/images/popcorn173e11.jpg"/>
+            </a>
+          </div>
+          <div class="episodelog-item style7 image" >
+            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=9">
+              <img alt="" src="assets/images/popcorn173e12.jpg"/>
+            </a>
+          </div>
+          <div class="episodelog-item style7 image" >
+            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=8">
+              <img alt="" src="assets/images/popcorn173e13.jpg"/>
+            </a>
+          </div>
+          <div class="episodelog-item style7 image" >
+            <a class="frame" href="https://www.youtube.com/watch?v=ezoyLmPfUXA&list=PL7-50R2PypvE5fUYYSd4QT1XsV89SQ3EC&index=7">
+              <img alt="" src="assets/images/popcorn173e14.jpg"/>
             </a>
           </div>
         </ul>
